<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >
<!--  -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

 <ImageView
     android:id="@+id/imageView2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_weight="0.3"
     android:src="@drawable/dropbox" />

  <TextView
      android:id="@+id/textView3"
      android:layout_width="199dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_weight="1"
      android:background="#ffffff"
      android:gravity="center_vertical|center_horizontal"
      android:text="DROPBOX CLOUD STORAGE"
      android:textColor="#0000ff"
      android:textSize="25sp"
      android:textStyle="bold|normal" />

    </LinearLayout>
    
    <TextView
        android:id="@+id/uploadEntranceView"
        android:layout_width="fill_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="0.5"
        android:gravity="center_vertical"
        android:text="@string/upload_activity_text_view"
        android:textColor="#0000ff"
        android:textColorHint="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/record_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/record"
        android:textColor="#0000ff" />
   
    <Button
        android:id="@+id/take_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/take_picture"
        android:textColor="#0000ff" />

    
    <Button
        android:id="@+id/upload_from_gallary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/upload_from_gallary"
        android:textColor="#0000ff" />
   
     <Button
        android:id="@+id/share_with_fb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/share_with_fb"
        android:textColor="#0000ff" />
   
    <Button
        android:id="@+id/upload_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:text="@string/upload_to_dropbox"
        android:textColor="#0000ff" />
    
</LinearLayout>
