<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_dropbox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

 <ImageView
     android:id="@+id/imageView1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_weight="0.3"
     android:src="@drawable/dropbox" />

  <TextView
      android:id="@+id/textView2"
      android:layout_width="199dp"
      android:layout_height="wrap_content"
      android:layout_gravity="center_vertical"
      android:layout_weight="1"
      android:background="#ffffff"
      android:gravity="center_vertical|center_horizontal"
      android:text="DROPBOX CLOUD STORAGE"
      android:textColor="#0000ff"
      android:textSize="25sp"
      android:textStyle="bold|normal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/first_linear_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/second_linear_layout"
        android:layout_below="@+id/title"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="0.7" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.7"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/welcome_message"
            android:textColor="#0000ff"
            android:textColorLink="#ffffff"
            android:textSize="15sp" />

       </ScrollView>
       </LinearLayout>

       <LinearLayout
           android:id="@+id/second_linear_layout"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:orientation="vertical"
           android:paddingTop="35dp" >

        <Button
            android:id="@+id/upload"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/upload"
            android:textColor="#0000ff" />

        <Button
            android:id="@+id/display"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/Display"
            android:textColor="#0000ff" />
        
         <Button
            android:id="@+id/login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1"
            android:text="@string/login"
            android:textColor="#0000ff" />
        
</LinearLayout>
    

</RelativeLayout>
